--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,25 +2,8 @@ on:
   pull_request:
     branches:
       - develop
-  
+#test actions
 jobs:
-  cypress-run:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: 🏗 Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-          cache: npm
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:
-          build: npm run build
-          start: npm start
   build:
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +24,36 @@ jobs:
 
       - name: 📦 Install dependencies
         run: npm install
+
+  cypress-run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: 🏗 Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          cache: npm
+
+      - name: 🏗 Setup Expo
+        uses: expo/expo-github-action@v7
+        with:
+          expo-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - name: 📦 Install dependencies
+        run: npm install
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          build: expo build:web
+          start: expo start -w
+          wait-on: http://localhost:19006
+          # cypres: npm run cypress:open
 
       # - name: 🚀 Publish app
       #   run: expo publish --non-interactive
